Copied pharmacophore alignment code from Kripo yasara plugin
Added webservice endpoint to perform an alignment
